After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787309 - hlsdemux: fix compilation with openssl 1.1.0
hlsdemux: fix compilation with openssl 1.1.0
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-05 12:30 UTC by George Kiagiadakis
Modified: 2017-09-07 10:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
hlsdemux: fix compilation with OpenSSL 1.1.0 (2.91 KB, patch)
2017-09-05 12:30 UTC, George Kiagiadakis
committed Details | Review

Description George Kiagiadakis 2017-09-05 12:30:43 UTC
Created attachment 359181 [details] [review]
hlsdemux: fix compilation with OpenSSL 1.1.0

The attached patch explains it.